<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginVertical="30dp"
        android:contentDescription="Logo ZSK"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/heading"
            android:text="@string/reported"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/reported_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/reported"
            android:text="@string/name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/surname"
            />
        <TextView
            android:id="@+id/reported_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/reported"
            android:text="@string/name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/classname"
            />
        <TextView
            android:id="@+id/reported_class"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/reported"
            android:text="@string/name"
            />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/button"
            />
    </LinearLayout>
</LinearLayout>