<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_marginVertical="30dp"
        android:contentDescription="Logo ZSK"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/heading"
                android:text="@string/no_uniform"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/label"
                android:text="@string/name"
                />
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/input"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/label"
                android:text="@string/surname"
                />
            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/input"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/label"
                android:text="@string/classname"
                />
            <EditText
                android:id="@+id/classname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/input"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note"
                style="@style/button"
                />
    </LinearLayout>
</LinearLayout>